lab1/Test/L1-A-0-38.output
Error Type A at Line 7
Error Type A at Line 12
Error Type A at Line 46
Error Type A at Line 55
Error Type A at Line 61
