lab1/Test/L1-A-0-38.cmm
struct zAwOhy6h7O0h {
  float de_V [ 1332707537 ] , uaWPYScvcMSVkKZYobI 
    [ 988566858 ] [ 1689977674 ] [ 449338207 ] = - oPY8AJvKzVJ2eQQoUn 
    = SkgHJcurO7rZaJR , lu2NOpeOeXWxk1B ;
  int gc0Tkvzie1N4gv2aU [ 1519698131 ] [ 1736680520 
    ] = - gG2rV84zI5fvU_ ( ) = hakicQ6REpk , VDbD0qWIi_phPQMdRY 
    = vBdoXfnd2cvGcI0 ;'
}fZni ( float RPcmv ) {
  if ( ! ( - XLcorPTeiZSHLOU = eYBr6X2c_n4SMim ) * 
    ! kLidx22AqGM_CAjNRP - ! lmsI4h_L49UrZ / Nk3L9RXV_dAOn 
    / YuRYkkz1 * pOXqE - - JSj1y5QyZYnYktQ * Q4R1HEFN80CExi9 
    * m0a5j1 $/ mHRIOVFN1S * Xjt1fqs5vXP_OgF * scgg7bjnPZ 
    * xTE1ESWW + ecUI77 * jr55d / W4uuA * P3iY97n47kg0B 
    * BZKJiGXUJn48ZxV && - wC5c / nAODY0uLq + j5vcbJwPu5p 
    < B6 >= utjnKvnsAp3XBk != aLKU_SiptN >= MmaSgbMxotmEo 
    >= JLQ3pkzAMHIvaK != tVRyB4d5tnSZr5 == wGGnCiiUG ) 
      if ( NZIen )   ssy5IlTCWTqQF ;
else   FH7 ;


  if ( - ! wZ6ZkGuk5BGhI = xY )   if ( yMRyB )   VaChyoho7bq 
    ;


  if ( ! Me1R_m * QW4esUwEN0 - oYvqHRDpRR2M + L_uo4FlYRs 
    + HFj9GWxmScqQ5T3CF9 + J82FqHYfEWI6iSfm94m - Gi8DAuxbNyT 
    + Qg - cD - FjBsv6OvbSvwvcnDsOt1 <= zD2MvRNGCTRT && 
    vcvQ )   uYw2YamWiltBbpWCFB ;
else   if ( ITcqLTHC )   if ( ot_8xDpQXb8 )   if ( 
    hTt30gv_scRu9h )   MVq ;




  if ( IDULl0CeN )   b0DqekDR9jZCbmU1 ;

  if ( JTh35Z1 )   if ( T1TkF1zr22qO )   if ( UEKnT 
    )   U9x8QU ;



}
struct t3pQCiDHQ wgpWmsQ ( int FmoYyB ) {
  struct aRmEcJ5_ EampIpCWO4hf = HchPin9jgxyCYJO5RN 
    ( vikboXD3XlKcpoBD ) = rsgRzqhcLYpgivb2Ar ;
}:
struct {
  struct {
  }IyahkBOxRnIwi4 = hyQQOx ( yvXaTwQ ) . U4 * nAH 
    * h4k + _xRTNS - I - jSy1fcAvmXc || FfqdHi5i || mDyPJrmzSWLdDq 
    , R ;
}l ( ) {
  float nCMo = Tp9PTQ4h . HO8jn [ YszqOVJeA6jDo_m5 
    ] [ tjMZZITut ] = zR7 , jze4MywtBQz = T86bV9Q63H , 
    E :;
  int X [ 843101324 ] [ 1273879356 ] [ 2031678345 
    ] ;
}
struct oWXEX2BNf19wCNCfT {
  int MtNQhQgwFfrhC1nQW2 ;
  int ^M , Xo4Shnk ;
  int eltj1iGJfkt0fDr1b ;
}fR7QXW5kAZKTWxRG4u ( ) {
  int e7YaXJQfba34yolEP [ 2138320591 ] ;
  int APsEx05yusiDbpmn8 = _UjVnU7gjT6v1Q9OeA ;
}
struct tAY2niUPXyChWw ;
